# platform-dirs-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: basic.rs  config_file.rs
src/: lib.rs
