[package]
name = "platform-dirs"
version = "0.3.0"
authors = ["Caleb Bassi <calebjbassi@gmail.com>"]
description = "A library for obtaining platform dependant directory paths for application and user directories"
readme = "README.md"
license = "MIT"
repository  = "https://github.com/cjbassi/platform-dirs-rs"
edition = "2018"

[dependencies]
dirs-next = "1.0.1"
